--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>クリックゲーム</title>
-    <link rel="stylesheet" href="style.css">
+    <title>クリックゲーム (iframe版)</title>
+    <style>
+        body {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+        iframe {
+            width: 400px;
+            height: 300px;
+            border: 2px solid black;
+        }
+    </style>
 </head>
 <body>
-    <h1>クリックゲーム</h1>
-    <p>スコア: <span id="score">0</span></p>
-    <button id="clickButton">クリック！</button>
-    <p id="timer">残り時間: <span id="time">10</span>秒</p>
-    <script src="script.js"></script>
+    <h1>クリックゲーム (iframe版)</h1>
+    <iframe id="gameFrame" src="game.html"></iframe>
 </body>
 </html>
